Implemented the grid template for the popular places (e.g. Home) page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,7 +10,9 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "css"
+      "css",
+      "assets",
+      "assets/css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -26,11 +28,13 @@
   },
   "imports": [
     {
-      "path": "css/index.scss",
+      "path": "assets/scss/styles.scss",
       "imports": [
-        "css/_reset.scss",
-        "css/_normalize.scss",
-        "css/_mixins.scss"
+        "assets/scss/_reset.scss",
+        "assets/scss/_normalize.scss",
+        "assets/scss/_variables.scss",
+        "assets/scss/_mixins.scss",
+        "assets/scss/card.scss"
       ]
     }
   ],
@@ -138,7 +142,7 @@
     ],
     "history": []
   },
-  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"compiler-minify-css\":{\"enabled\":true}}",
+  "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"],\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
   "autoprefixer": {
     "browsers": "last 5 versions"
