--- a/prepros-6.config
+++ b/prepros-6.config
@@ -12,7 +12,8 @@
     "expandedDirs": [
       "css",
       "assets",
-      "assets/css"
+      "assets/css",
+      "html"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -27,6 +28,14 @@
     "hideUnwatchedFiles": false
   },
   "imports": [
+    {
+      "path": "css/index.scss",
+      "imports": [
+        "css/_reset.scss",
+        "css/_normalize.scss",
+        "css/_mixins.scss"
+      ]
+    },
     {
       "path": "assets/scss/styles.scss",
       "imports": [
