--- a/prepros-6.config
+++ b/prepros-6.config
@@ -12,8 +12,7 @@
     "expandedDirs": [
       "css",
       "assets",
-      "assets/css",
-      "html"
+      "assets/css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -29,14 +28,6 @@
   },
   "imports": [
     {
-      "path": "css/index.scss",
-      "imports": [
-        "css/_reset.scss",
-        "css/_normalize.scss",
-        "css/_mixins.scss"
-      ]
-    },
-    {
       "path": "assets/scss/styles.scss",
       "imports": [
         "assets/scss/_reset.scss",
@@ -48,7 +39,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
