--- a/prepros-6.config
+++ b/prepros-6.config
@@ -28,6 +28,14 @@
   },
   "imports": [
     {
+      "path": "css/index.scss",
+      "imports": [
+        "css/_reset.scss",
+        "css/_normalize.scss",
+        "css/_mixins.scss"
+      ]
+    },
+    {
       "path": "assets/scss/styles.scss",
       "imports": [
         "assets/scss/_reset.scss",
