--- a/prepros-6.config
+++ b/prepros-6.config
@@ -12,8 +12,7 @@
     "expandedDirs": [
       "css",
       "assets",
-      "assets/css",
-      "assets/scss"
+      "assets/css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -29,6 +28,14 @@
   },
   "imports": [
     {
+      "path": "css/index.scss",
+      "imports": [
+        "css/_reset.scss",
+        "css/_normalize.scss",
+        "css/_mixins.scss"
+      ]
+    },
+    {
       "path": "assets/scss/styles.scss",
       "imports": [
         "assets/scss/_reset.scss",
@@ -40,7 +47,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
