--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,7 +42,8 @@
         "assets/scss/_normalize.scss",
         "assets/scss/_variables.scss",
         "assets/scss/_mixins.scss",
-        "assets/scss/card.scss"
+        "assets/scss/card.scss",
+        "assets/scss/listings.scss"
       ]
     }
   ],
