--- a/prepros-6.config
+++ b/prepros-6.config
@@ -43,12 +43,13 @@
         "assets/scss/_variables.scss",
         "assets/scss/_mixins.scss",
         "assets/scss/card.scss",
-        "assets/scss/listings.scss"
+        "assets/scss/listings.scss",
+        "assets/scss/listingsForm.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "settings"
   },
   "fileWatcher": {
     "enabled": true,
