--- a/prepros-6.config
+++ b/prepros-6.config
@@ -12,7 +12,8 @@
     "expandedDirs": [
       "css",
       "assets",
-      "assets/css"
+      "assets/css",
+      "assets/scss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -28,14 +29,6 @@
   },
   "imports": [
     {
-      "path": "css/index.scss",
-      "imports": [
-        "css/_reset.scss",
-        "css/_normalize.scss",
-        "css/_mixins.scss"
-      ]
-    },
-    {
       "path": "assets/scss/styles.scss",
       "imports": [
         "assets/scss/_reset.scss",
@@ -44,12 +37,13 @@
         "assets/scss/_mixins.scss",
         "assets/scss/card.scss",
         "assets/scss/listings.scss",
-        "assets/scss/listingsForm.scss"
+        "assets/scss/listingsForm.scss",
+        "assets/scss/footer.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "settings"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
