fixes for the home page card animation

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -12,7 +12,8 @@
     "expandedDirs": [
       "css",
       "assets",
-      "assets/css"
+      "assets/css",
+      "assets/scss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -28,24 +29,29 @@
   },
   "imports": [
     {
-      "path": "css/index.scss",
-      "imports": [
-        "css/_reset.scss",
-        "css/_normalize.scss",
-        "css/_mixins.scss"
-      ]
-    },
-    {
       "path": "assets/scss/styles.scss",
       "imports": [
         "assets/scss/_reset.scss",
         "assets/scss/_normalize.scss",
         "assets/scss/_variables.scss",
         "assets/scss/_mixins.scss",
+        "assets/scss/header.scss",
         "assets/scss/card.scss",
         "assets/scss/listings.scss",
         "assets/scss/listingsForm.scss",
         "assets/scss/footer.scss"
+      ]
+    },
+    {
+      "path": "assets/scss/header.scss",
+      "imports": [
+        "assets/scss/_mixins.scss"
+      ]
+    },
+    {
+      "path": "assets/scss/_header.scss",
+      "imports": [
+        "assets/scss/_mixins.scss"
       ]
     }
   ],
