--- a/prepros-6.config
+++ b/prepros-6.config
@@ -12,8 +12,7 @@
     "expandedDirs": [
       "css",
       "assets",
-      "assets/css",
-      "assets/scss"
+      "assets/css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -29,6 +28,14 @@
   },
   "imports": [
     {
+      "path": "css/index.scss",
+      "imports": [
+        "css/_reset.scss",
+        "css/_normalize.scss",
+        "css/_mixins.scss"
+      ]
+    },
+    {
       "path": "assets/scss/styles.scss",
       "imports": [
         "assets/scss/_reset.scss",
@@ -40,18 +47,6 @@
         "assets/scss/listings.scss",
         "assets/scss/listingsForm.scss",
         "assets/scss/footer.scss"
-      ]
-    },
-    {
-      "path": "assets/scss/header.scss",
-      "imports": [
-        "assets/scss/_mixins.scss"
-      ]
-    },
-    {
-      "path": "assets/scss/_header.scss",
-      "imports": [
-        "assets/scss/_mixins.scss"
       ]
     }
   ],
