--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,13 +6,18 @@
     {
       "path": "css/index.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"compact\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "assets/scss/scholarly.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"documentation/scholarly.min.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "css",
       "assets",
-      "assets/css"
+      "assets/css",
+      "assets/scss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
