reorganized folder structure, renamed some files, added 3 additional pages

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,6 +10,10 @@
     {
       "path": "assets/scss/scholarly.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"documentation/scholarly.min.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}"
+    },
+    {
+      "path": "assets/scss/styles.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"assets/css/styles.min.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}"
     }
   ],
   "fileTree": {
@@ -35,15 +39,15 @@
     {
       "path": "assets/scss/styles.scss",
       "imports": [
-        "assets/scss/_reset.scss",
-        "assets/scss/_normalize.scss",
-        "assets/scss/_variables.scss",
-        "assets/scss/_mixins.scss",
-        "assets/scss/header.scss",
-        "assets/scss/card.scss",
-        "assets/scss/listings.scss",
-        "assets/scss/listingsForm.scss",
-        "assets/scss/footer.scss"
+        "assets/scss/utils/_reset.scss",
+        "assets/scss/utils/_normalize.scss",
+        "assets/scss/utils/_variables.scss",
+        "assets/scss/utils/_mixins.scss",
+        "assets/scss/components/header.scss",
+        "assets/scss/components/card.scss",
+        "assets/scss/components/footer.scss",
+        "assets/scss/components/listings.scss",
+        "assets/scss/components/add-listing.scss"
       ]
     }
   ],
