added media query for add a listing form

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -45,6 +45,13 @@
         "assets/scss/components/listings.scss",
         "assets/scss/components/add-listing.scss"
       ]
+    },
+    {
+      "path": "assets/scss/components/add-listing.scss",
+      "imports": [
+        "assets/scss/utils/_variables.scss",
+        "assets/scss/utils/_mixins.scss"
+      ]
     }
   ],
   "projectView": {
