--- a/prepros-6.config
+++ b/prepros-6.config
@@ -43,7 +43,8 @@
         "assets/scss/components/card.scss",
         "assets/scss/components/footer.scss",
         "assets/scss/components/listings.scss",
-        "assets/scss/components/add-listing.scss"
+        "assets/scss/components/add-listing.scss",
+        "assets/scss/components/place.scss"
       ]
     }
   ],
