account page design

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,6 +10,10 @@
     {
       "path": "assets/scss/styles.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"assets/css/styles.min.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}"
+    },
+    {
+      "path": "assets/scss/components/account.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":false,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":null}"
     }
   ],
   "fileTree": {
@@ -17,7 +21,8 @@
       "css",
       "assets",
       "assets/css",
-      "assets/scss"
+      "assets/scss",
+      "assets/scss/components"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -43,7 +48,8 @@
         "assets/scss/components/card.scss",
         "assets/scss/components/footer.scss",
         "assets/scss/components/listings.scss",
-        "assets/scss/components/add-listing.scss"
+        "assets/scss/components/add-listing.scss",
+        "assets/scss/components/account.scss"
       ]
     }
   ],
